--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Hi there!</h1>
     
-    <p>
-      I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
+    <h1>Hi there!</h1>
+    <div class = "left-side">
+     
+    <p class = "active-link">
+      <a href="index.html">Home</a>
     </p>
-
+    </div>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
