--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     
 <div class = "nav-border">
     <div class = "left-side">
-     <div class = "nav-link-border current-link" >
+     <span class = "current-link" >
         <a href="index.html">Home</a>
-      </div>
+      </span>
          <div class = "nav-link-border" >
         <a href="aboutUs.html">About Us</a>
       </div>
@@ -34,7 +34,10 @@
     </div>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-    <input type = "image" src = "CheckoutCart.png" name = "cart" class = "CartButton"
+    <div class="checkoutCart">
+      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762" style="position:fixed;top:20px;right:20px;" alt="cart">
+      <button class = "btn"> Cart</button>
+    </div>
 <!--     <button type = "button" style="position:fixed;top:20px;right:20px;" img = > Cart</button> -->
 <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script> -->
