👰🌜 Checkpoint ./style.css:18049447/189:18325740/537 ./index.html:18049447/25:18325740/658

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     
 <div class = "nav-border">
     <div class = "left-side">
-     <span class = "current-link" >
+     <span class = "nav-link-border current-link" >
         <a href="index.html">Home</a>
       </span>
          <div class = "nav-link-border" >
-        <a href="aboutUs.html">About Us</a>
+        <a href="aboutUs.html">About</a>
       </div>
       <div class = "nav-link-border" >
         <a href="Popular.html">Popular</a>
@@ -34,11 +34,7 @@
     </div>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-    <div class="checkoutCart">
-      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762" style="position:fixed;top:20px;right:20px;" alt="cart">
-      <button class = "btn"> Cart</button>
-    </div>
-<!--     <button type = "button" style="position:fixed;top:20px;right:20px;" img = > Cart</button> -->
+    <input type = "image" src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762" style="position:fixed;top:20px;right:20px;" />
 <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script> -->
   </body>
