👄🤘 Checkpoint ./style.css:18049447/326:18325740/192 ./index.html:18049447/50:18325740/754

--- a/index.html
+++ b/index.html
@@ -33,15 +33,12 @@
       </div>
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-      <div class="checkoutCart">
-        <input
-          type="image"
-          src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762"
-          style="position:fixed;top:20px;right:20px;"
-        />
-      </div>
+    </div>
+    <button id = "checkoutCart">
+      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762" style="position:fixed;top:20px;right:20px;">
+    </button> 
       <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script> -->
-    </div>
+    
   </body>
 </html>
