--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
           </div>
         </div>
       </div>
+      </div>
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
-    </div>
-    <button id = "checkoutCart">
+    
+    <button id = "checkoutCart" style="position:fixed;top:20px;right:20px;">
       <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762" style="position:fixed;top:20px;right:20px;">
     </button> 
       <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
