🏩🎆 Checkpoint ./style.css:18049447/1397 ./index.html:18049447/152

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </div>
       </div>
       </div>
+    <div class = "pimg2">
+     <h2>
+       What's up 
+      </h2> 
+    </div>
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     
