🍯👩‍❤️‍💋‍👩 Checkpoint ./.glitch-assets:18049447/895 ./index.html:18049447/486 ./style.css:18049447/282

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           to make it easier for folks to view source and remix -->
     
     <button id = "checkoutCart" style="position:fixed;top:20px;right:20px;">
-      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FCheckoutCart.png?v=1595878631762" style="position:fixed;top:20px;right:20px;">
+      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F580b57fbd9996e24bc43bd2f.png?v=1595885148171">
     </button> 
       <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script> -->
