📈🙋 Checkpoint ./index.html:18049447/517 ./style.css:18049447/110

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
       </div>
       </div>
     <div class = "pimg2">
-     <h2>
-       What's up 
-      </h2> 
+    <section class = "sectionBorder1">
+       Wha
+      </section>
     </div>
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     
     <button id = "checkoutCart" style="position:fixed;top:20px;right:20px;">
-      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F580b57fbd9996e24bc43bd2f.png?v=1595885148171">
+      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a364b752c0633.9984354215135077011803.png?v=1595885078748">
     </button> 
       <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js" defer></script> -->
