--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Hello!</title>
+    <title>Imaginary Friends Home Page</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -24,10 +24,10 @@
             <a href="aboutUs.html">About</a>
           </div>
           <div class="nav-link-border">
-            <a href="Popular.html">Popular</a>
+            <a href="popular.html">Popular</a>
           </div>
           <div class="nav-link-border">
-            <a href="New.html">New</a>
+            <a href="new.html">New</a>
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     
-    <button id = "checkoutCart" onclick="myFunction();" style="position:fixed;top:20px;right:20px;">
+    <button id = "checkoutCart" onclick="cartFunction();" style="position:fixed;top:20px;right:20px;">
       <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a364b752c0633.9984354215135077011803.png?v=1595885078748">
     </button> 
       <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
