🚤💑 Checkpoint ./style.css:18049447/109 ./index.html:18049447/325

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
       </div>
     <div class = "pimg2">
     <section class = "sectionBorder1">
-       Wha
+      <div class = "headText">
+      <h> Innovative</h>
+      </div>
+      <p>
+        Our organization gives people the ability to buy imaginary friends that will love you
+        more than anyone else. 
+      </p>
       </section>
     </div>
       <!-- include the Glitch button to show what the webpage is about and
