--- a/cart.html
+++ b/cart.html
@@ -8,7 +8,7 @@
     <title>Imaginary Friends Cart</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/AboutUs.css" />
+    <link rel="stylesheet" href="/Cart.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
