--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
+     
     <div class="pimg1">
+     
       <div class="nav-border">
         <div class="left-side">
           <span class="nav-link-border current-link">
@@ -29,6 +31,8 @@
           <div class="nav-link-border">
             <a href="new.html">New</a>
           </div>
+          <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix?v=1595891583169" width="60"
+         height="60">
         </div>
       </div>
       </div>
