--- a/popular.html
+++ b/popular.html
@@ -1,1 +1,21 @@
-h1
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Imaginary Friends Popular</title>
+
+    <!-- import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/Popular.css" />
+
+    <!-- import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
+  </head>
+  <body>
+   <p>
+     chickentendies23
+    </p> 
+  </body>
+</html>
