--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
           <div class="nav-link-border">
             <a href="new.html">New</a>
           </div>
-          <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix?v=1595891583169" width="60"
-         height="60">
+          <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix?v=1595891583169" width="30"height="30">
         </div>
       </div>
       </div>
@@ -50,7 +49,7 @@
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     
-    <button id = "checkoutCart" onclick="cartFunction();" style="position:fixed;top:20px;right:20px;">
+    <button id = "checkoutCart" onclick="cartFunction();" style="position:fixed;top:45px;right:20px;">
       <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a364b752c0633.9984354215135077011803.png?v=1595885078748">
     </button> 
       <!--     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
