--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="nav-link-border">
             <a href="new.html">New</a>
           </div>
-          <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix?v=1595891583169" width="30"height="30">
+          <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix-1?v=1595892487302" width="30"height="30">
         </div>
       </div>
       </div>
