--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           </div>
           <div class="nav-link-border">
             <a href="new.html">New</a>
-          </div>
-          <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FFree_Sample_By_Wix-1?v=1595892487302" width="30"height="30">
-        </div>
+      </div>
+<!--           <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FScreen%20Shot%202020-07-27%20at%204.08.21%20PM.png?v=1595913238558" width="30"height="30"> -->
+        </div> 
       </div>
       </div>
     <div class = "pimg2">
