--- a/new.html
+++ b/new.html
@@ -28,9 +28,10 @@
             <a href="new.html">New</a>
        </div>
         </div> 
+      </div>
+    <h1> New Items</h1>
+      
     
-    <h1> New items </h1>
-    <p>New items added</p>
   </body>
   
   
