😼🗃 Checkpoint ./popular.html:18075093/57 ./new.css:18325740/197 ./.glitch-assets:18075093/393 ./index.html:18049447/27 ./style.css:18049447/447:18325740/461 ./aboutUs.html:18075093/518 ./new.html:18325740/268 ./AboutUs.css:18049447/4630

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -13,9 +13,18 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>
+  <h1>
+   <center>Our Mission</center>
+  </h1>
   <body>
-   <p>
-     chickentendies23
-    </p> 
+   <p>We created Imaginary Friends as a high quality business site for people that has no
+    friends and want to purse love and company with their money.</p> 
+  <h2>
+    <center>Information about our products</center>
+    </h2>
+    <p>
+      All imaginary friends are made with high quality imagination
+      
+    </p>
   </body>
 </html>
