--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
        
       </div>
       <p id = "frontText">
-       creativity
+       Imaginary Friends
           </p>
       </div>
      
