--- a/popular.html
+++ b/popular.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <h1>
-      Best sellers
+      <center>Best sellers</center>
     </h1>
     <p>
-      chickentendies23
+      
     </p>
   </body>
 </html>
