🐃👭 Checkpoint ./aboutUs.html:18075093/439 ./style.css:18325740/14 ./new.html:18325740/104 ./new.css:18325740/783 ./cart.html:18049447/841 ./index.html:18049447/1494 ./Cart.css:18049447/5471

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,8 +23,15 @@
     <center>Information about our products</center>
     </h2>
     <p>
-      All imaginary friends are made with high quality imagination
-      
+      All imaginary friends are made with the highest quality imagination possible,
+     our products are made on U.S soil.
     </p>
+    <h3>
+      <center>Maintenance and Repair</center>
+    </h3>
+      <p>
+        Feed Imaginary Friend 3 times a day, take he/she to walk 2 days a week and
+        don't try to give he/she a shower.(They don't like it.)
+      </p>
   </body>
 </html>
