--- a/cart.html
+++ b/cart.html
@@ -14,8 +14,27 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-   <p>
-     chickentendies23
-    </p> 
+    <h class = "category">
+      shopping Cart
+    </h>
+    <div class="nav-border">
+        <div class="left-side">
+          
+          <span class="nav-link-border current-link">
+            <a href="index.html">Home</a>
+          </span>
+          <div class="nav-link-border">
+            <a href="aboutUs.html">About</a>
+          </div>
+          <div class="nav-link-border">
+            <a href="popular.html">Popular</a>
+          </div>
+          <div class="nav-link-border">
+            <a href="new.html">New</a>
+       </div>
+   
+ <!--    <img class = "logo", src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FScreen%20Shot%202020-07-27%20at%204.08.21%20PM.png?v=1595913238558" width="30"height="30"> -->
+        </div> 
+    </div>
   </body>
 </html>
