🌚🚀 Checkpoint ./aboutUs.html:18075093/35 ./new.css:18325740/397 ./new.html:18325740/71 ./popular.html:18075093/301

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -54,7 +54,7 @@
     </h3>
     <p>
       Feed Imaginary Friend 3 times a day, take he/she to walk 2 days a week and
-      don't try to give he/she a shower.(They don't like it.)
+      <strong>don't try to give he/she a shower</strong>.(They don't like it.)
     </p>
     <button
       id="checkoutCart"
