--- a/popular.html
+++ b/popular.html
@@ -14,11 +14,21 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
+    
     <h1>
       <center>Best sellers</center>
     </h1>
     <p>
       
     </p>
+        <button
+      id="checkoutCart"
+      onclick="cartFunction();"
+      style="position:fixed;top:45px;right:20px;"
+    >
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a364b752c0633.9984354215135077011803.png?v=1595885078748"
+      />
+    </button>
   </body>
 </html>
