🌷🚋 Checkpoint ./new.css:18325740/343 ./new.html:18325740/341 ./Cart.css:18049447/29 ./.glitch-assets:18325740/379 ./aboutUs.html:18075093/174 ./index.html:18049447/5 ./script.js:18049447/18

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -14,6 +14,9 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
+    <div class="pimg1">
+
+       
     <div class="nav-border">
       <div class="left-side">
         <span class="nav-link-border current-link">
@@ -65,5 +68,6 @@
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a364b752c0633.9984354215135077011803.png?v=1595885078748"
       />
     </button>
+      </div>
   </body>
 </html>
