🗺💡 Checkpoint ./index.html:18049447/7 ./cart.html:18049447/224 ./script.js:18049447/115

--- a/cart.html
+++ b/cart.html
@@ -36,5 +36,8 @@
     <p id="cartDiv">
       Shopping Cart
     </p>
+    <p id = "moveFriend">
+      <img id = "moveFriend" src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Ftimmy.png?v=1595965980993" style = "position:relative;top:20%;left:58px;">
+    </p>
   </body>
 </html>
