🎁🎸 Checkpoint ./popular.html:18049447/2 ./popular.css:18049447/2065

--- a/popular.html
+++ b/popular.html
@@ -8,7 +8,7 @@
     <title>Imaginary Friends Popular</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/Popular.css" />
+    <link rel="stylesheet" href="/popular.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
