🍛👕 Checkpoint ./.glitch-assets:18049447/430 ./popular.html:18049447/4523 ./popular.css:18049447/163

--- a/popular.html
+++ b/popular.html
@@ -31,25 +31,35 @@
       </div>
     </div>
 
-    <h1><br><br>
+    <h1>
+      <br /><br />
       <center>Best sellers</center>
     </h1>
-     <div class = "pimg1">
-        <p class = "p1">Casper the Friendly Ghost</p>
-        <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a9934159fc609199d0ff017.png?v=1596040260635" style = "position:relative;top:20%;left:58px;">
+    <div class="pimg1">
+      <p class="p1">Casper the Friendly Ghost</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a9934159fc609199d0ff017.png?v=1596040260635"
+        style="position:relative;top:-160;left:58px;"
+      />
     </div>
-      
-    <div class = "pimg2">
-      <p class = "p2"> Hobbes</p>
-      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fcalvin-and-hobbes.png?v=1596041793375" style = "position:relative;top:-160px;;left:24%;">
+
+    <div class="pimg2">
+      <p class="p2">Hobbes</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fcalvin-and-hobbes.png?v=1596041793375"
+        style="position:relative;top:-160px;;left:370px;"
+      />
     </div>
-    
-    <div class = "pimg3">
-      <p class = "p3"> Hobbes</p>
-      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fcalvin-and-hobbes.png?v=1596041793375" style = "position:relative;top:-160px;;left:24%;">
+
+    <div class="pimg3">
+      <p class="p3">Bing Bong</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a0c692682e02d31ecb8d003.png?v=1596042282616"
+        style="position:relative;top:-320px;;left:650px;"
+      />
     </div>
-  
-        <button
+
+    <button
       id="checkoutCart"
       onclick="cartFunction();"
       style="position:fixed;top:45px;right:20px;"
