--- a/popular.html
+++ b/popular.html
@@ -58,6 +58,13 @@
         style="position:relative;top:-320px;;left:650px;"
       />
     </div>
+    <div class="pimg4">
+      <p class="p4">Bloo</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fkisspng-bloo-drawing-imaginary-friend-cartoon-television-s-fosters-5b29ff4c534802.6218539115294789883411.png?v=1596048483055"
+        style="position:relative;top:-470px;;left:910px;"
+      />
+    </div>
 
     <button
       id="checkoutCart"
