🚪💫 Checkpoint ./popular.html:18049447/1 ./aboutUs.html:18075093/62 ./AboutUs.css:18075093/52 ./style.css:18049447/164

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -40,10 +40,10 @@
     </h1>
 
     <div>
-      <p1>
+      <p1><center>
         We created Imaginary Friends as a high quality business site for people
         that has no friends and want to purse love and company with their money.
-      </p1>
+        </center> </p1>
     </div>
     <h2>
       <center>Information about our products</center>
