--- a/popular.html
+++ b/popular.html
@@ -62,7 +62,7 @@
       <p class="p4">Bloo</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fkisspng-bloo-drawing-imaginary-friend-cartoon-television-s-fosters-5b29ff4c534802.6218539115294789883411.png?v=1596048483055"
-        style="position:relative;top:-470px;;left:910px;"
+        style="position:relative;top:-470px;;left:91i0px;"
       />
     </div>
 
