😂🚇 Checkpoint ./new.html:18325740/653 ./aboutUs.html:18075093/376 ./new.css:18325740/1431 ./popular.html:18049447/53 ./popular.css:18049447/45 ./.glitch-assets:18325740/363 ./AboutUs.css:18075093/109

--- a/popular.html
+++ b/popular.html
@@ -62,14 +62,14 @@
       <p class="p4">Bloo</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fkisspng-bloo-drawing-imaginary-friend-cartoon-television-s-fosters-5b29ff4c534802.6218539115294789883411.png?v=1596048483055"
-        style="position:relative;top:-500px;;left:910px;"
+        style="position:relative;top:-500px;left: 1120px"
       />
     </div>
     <div class="pimg5">
       <p class="p5">Winnie the Pooh</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fwinnie-the-pooh.png?v=1596050108618"
-        style="position:relative;top:160px;;left:1200px;"
+        style="position:relative;top:-700px;;left:1500px;"
       />
     </div>
     
