--- a/new.html
+++ b/new.html
@@ -15,7 +15,7 @@
   <body>
     <div class="nav-border">
       <div class="left-side">
-        <span class="nav-link-border current-link">
+        <span class="nav-link-border ">
           <a href="index.html">Home</a>
         </span>
         <div class="nav-link-border">
@@ -24,7 +24,7 @@
         <div class="nav-link-border">
           <a href="popular.html">Popular</a>
         </div>
-        <div class="nav-link-border">
+        <div class="nav-link-border current-link">
           <a href="new.html">New</a>
         </div>
       </div>
