--- a/popular.html
+++ b/popular.html
@@ -78,7 +78,7 @@
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
         style="position:relative;top:-790px;;left:1600px;"
       />
-    
+        </div>
 
     <button
       id="checkoutCart"
