👻🎇 Checkpoint ./AboutUs.css:18075093/159 ./aboutUs.html:18075093/484

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,13 +31,12 @@
             <a href="new.html">New</a>
           </div>
         </div>
-<div class = "text1">
+  
         <h>
           <br><br>
-          <center>Our Mission</center>
+          Our Mission
         </h>
         <p>
-      
             We created Imaginary Friends as a high quality business site for
             people that has no friends and want to purse love and company with
             their money.
