🍫🐢 Checkpoint ./new.html:18325740/54

--- a/new.html
+++ b/new.html
@@ -60,7 +60,7 @@
     
 <!--     Danny Phantom -->
     <div class = "pimg6">
-      <p class = "p6" >Danny Phantom</p>
+      <p class = "p6" style = "position:relative;top:-200px;left:50px;" >Danny Phantom</p>
       <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fdp.png?v=1596051687546" style = "position:relative;top:-400px;left:58pxght:200px;width:180px;">
     </div>
     
