--- a/popular.html
+++ b/popular.html
@@ -39,7 +39,7 @@
       <p class="p1">Casper the Friendly Ghost</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a9934159fc609199d0ff017.png?v=1596040260635"
-        style="position:relative;top:97px;left:58px;"
+        style="position:relative;top:97px;left:16%;"
       />
     </div>
 
@@ -47,7 +47,7 @@
       <p class="p2">Hobbes</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fcalvin-and-hobbes.png?v=1596041793375"
-        style="position:relative;top:-80px;;left:370px;"
+        style="position:relative;top:-80px;;left:32%;"
       />
     </div>
 
@@ -55,21 +55,21 @@
       <p class="p3">Bing Bong</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a0c692682e02d31ecb8d003.png?v=1596042282616"
-        style="position:relative;top:-250px;;left:750px;"
+        style="position:relative;top:-250px;;left:48%;"
       />
     </div>
     <div class="pimg4">
       <p class="p4">Bloo</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fkisspng-bloo-drawing-imaginary-friend-cartoon-television-s-fosters-5b29ff4c534802.6218539115294789883411.png?v=1596048483055"
-        style="position:relative;top:-400px;left: 1120px"
+        style="position:relative;top:-400px;left: 64%"
       />
     </div>
     <div class="pimg5">
       <p class="p5">Winnie the Pooh</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fwinnie-the-pooh.png?v=1596050108618"
-        style="position:relative;top:-590px;;left:1500px;"
+        style="position:relative;top:-590px;;left:80%;"
       />
     </div>
     <div class="pimg5">
