🍮🕵 Checkpoint ./popular.css:18049447/20 ./popular.html:18049447/126 ./new.html:18049447/237

--- a/popular.html
+++ b/popular.html
@@ -66,19 +66,20 @@
       />
     </div>
     <div class="pimg5">
-      <p class="p5">Winnie the Pooh</p>
+      <p  class="p5">Winnie the Pooh</p>
       <img
+           
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fwinnie-the-pooh.png?v=1596050108618"
         style="position:relative;top:-590px;;left:80%;"
       />
     </div>
-    <div class="pimg5">
-      <p class="p5">Plank</p>
+<!--     <div class="pimg6">
+      <p class="p6">Plank</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
         style="position:relative;top:-790px;;left:1600px;"
       />
-        </div>
+        </div> -->
 
     <button
       id="checkoutCart"
