🎆💽 Checkpoint ./new.html:18049447/161 ./popular.html:18049447/564 ./style.css:18049447/14 ./popular.css:18049447/259 ./new.css:18049447/14

--- a/popular.html
+++ b/popular.html
@@ -16,13 +16,13 @@
   <body>
     <div class="nav-border">
       <div class="left-side">
-        <span class="nav-link-border current-link">
+        <span class="nav-link-border ">
           <a href="index.html">Home</a>
         </span>
         <div class="nav-link-border">
           <a href="aboutUs.html">About</a>
         </div>
-        <div class="nav-link-border">
+        <div class="nav-link-border current-link">
           <a href="popular.html">Popular</a>
         </div>
         <div class="nav-link-border">
@@ -73,14 +73,27 @@
         style="position:relative;top:-590px;;left:80%;"
       />
     </div>
-<!--     <div class="pimg6">
+    <div class="pimg6">
       <p class="p6">Plank</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
-        style="position:relative;top:-790px;;left:1600px;"
+        style="position:relative;top:-450px;;left:16%;"
       />
-        </div> -->
-
+        </div>
+ <div class="pimg7">
+      <p class="p7">Plank</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
+        style="position:relative;top:-450px;;left:16%;"
+      />
+        </div>
+     <div class="pimg8">
+      <p class="p8">Plank</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
+        style="position:relative;top:-450px;;left:16%;"
+      />
+        </div>
     <button
       id="checkoutCart"
       onclick="cartFunction();"
