--- a/popular.html
+++ b/popular.html
@@ -81,10 +81,10 @@
       />
         </div>
  <div class="pimg7">
-      <p class="p7">Plank</p>
+      <p class="p7">Peter pan</p>
       <img
-        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
-        style="position:relative;top:-450px;;left:16%;"
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPeter-Pan-Download-PNG.png?v=1596134606783"
+        style="position:relative;top:-625px;;left:33%;"
       />
         </div>
      <div class="pimg8">
