🌁🍩 Checkpoint ./popular.css:18049447/14 ./popular.html:18049447/719 ./.glitch-assets:18049447/427

--- a/popular.html
+++ b/popular.html
@@ -90,8 +90,22 @@
      <div class="pimg8">
       <p class="p8">Plank</p>
       <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5c70306b3ce41c0ef9f4bd51.png?v=1596135630890"
+        style="position:relative;top:-450px;;left:50%;"
+      />
+        </div>
+     <div class="pimg9">
+      <p class="p9">Plank</p>
+      <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
-        style="position:relative;top:-450px;;left:16%;"
+        style="position:relative;top:-450px;;left:67%;"
+      />
+        </div>
+     <div class="pimg10">
+      <p class="p10">Plank</p>
+      <img
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
+        style="position:relative;top:-450px;;left:84%;"
       />
         </div>
     <button
