--- a/popular.html
+++ b/popular.html
@@ -88,17 +88,17 @@
       />
         </div>
      <div class="pimg8">
-      <p class="p8">Plank</p>
+      <p class="p8">Cosmo</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5c70306b3ce41c0ef9f4bd51.png?v=1596135630890"
-        style="position:relative;top:-450px;;left:50%;"
+        style="position:relative;top:-812px;;left:49%;"
       />
         </div>
      <div class="pimg9">
-      <p class="p9">Plank</p>
+      <p class="p9">Sonic</p>
       <img
-        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2FPlank.png?v=1596054561971"
-        style="position:relative;top:-450px;;left:67%;"
+        src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F580b57fcd9996e24bc43c336.png?v=1596136572740"
+        style="position:relative;top:-990px;;left:66%;"
       />
         </div>
      <div class="pimg10">
