🚴✍️ Checkpoint ./new.html:18075093/479:18325740/552 ./.glitch-assets:18049447/739:18075093/875:18325740/373 ./popular.html:18049447/327 ./popular.css:18049447/6 ./aboutUs.html:18049447/63

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,10 +18,10 @@
     <div class="pimg1">
       <div class="nav-border">
         <div class="left-side">
-          <span class="nav-link-border current-link">
+          <span class="nav-link-border">
             <a href="index.html">Home</a>
           </span>
-          <div class="nav-link-border">
+          <div class="nav-link-border current-link">
             <a href="aboutUs.html">About</a>
           </div>
           <div class="nav-link-border">
@@ -32,7 +32,7 @@
           </div>
         </div>
   <div style = "position:fixed; left:150px; right:160px; top:100px; bottom: 150px;">
-    <Center>
+<!--     <Center> -->
         <h1>
          Our Mission Statement
         </h1>
