🎻🐡 Checkpoint ./style.css:18049447/517 ./new.html:18325740/188 ./.glitch-assets:18049447/887 ./index.html:18049447/10

--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Imaginary Friends Popular</title>
+    <title>Imaginary Friends New</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/popular.css"/>
@@ -33,6 +33,8 @@
     <h1><br><br>
       <center>New Items</center>
     </h1>
+    
+    <hr>
      <div class = "pimg1">
         <p class = "p1">Casper the Friendly Ghost</p>
         <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a9934159fc609199d0ff017.png?v=1596040260635" style = "position:relative;top:97px;left:16%;">
