--- a/new.html
+++ b/new.html
@@ -13,6 +13,7 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
+    <div class="background">
     <div class="nav-border">
       <div class="left-side">
         <span class="nav-link-border ">
