🐴👨‍❤️‍👨 Checkpoint ./style.css:18049447/147 ./new.html:18075093/105 ./new.css:18075093/706 ./index.html:18049447/185

--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
     <div class = "pimg2">
     <section class = "sectionBorder1">
       <div class = "headText">
-      <h> Innovative</h>
+      <h> Why we do it</h>
       </div>
       <p>
-        Our organization gives people the ability to buy imaginary friends that will love you
-        more than anyone else. 
+        Here at Imaginary Friends we want to 
       </p>
       </section>
     </div>
