--- a/new.html
+++ b/new.html
@@ -99,5 +99,6 @@
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F5a364b752c0633.9984354215135077011803.png?v=1595885078748"
       />
     </button>
+    </div>
   </body>
 </html>
