🎯⭐️ Checkpoint ./index.html:18049447/346 ./new.html:18075093/296 ./new.css:18075093/85 ./style.css:18049447/624 ./.glitch-assets:18049447/372

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <h> Why we do it</h>
       </div>
       <p>
-        Here at Imaginary Friends we want to 
+        Here at Imaginary Friends we want to provide what was lost to millions of adults. Our Childhood. We want to provide the memories and imagination 
+        of a child for an adult. Bring back a piece of your care free life after hpurs of hardwork. Our service is essential for any and every adult.
       </p>
       </section>
     </div>
