🎯🎰 Checkpoint ./style.css:18049447/486 ./new.html:18075093/156 ./index.html:18049447/459

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         of a child for an adult. Bring back a piece of your care free life after hpurs of hardwork. Our service is essential for any and every adult.
       </p>
       </section>
+      <section class = "sectionBorder2">
+      <div class = "headText2">
+      <h> Why we do it</h>
+      </div>
+      <p>
+        Here at Imaginary Friends we want to provide what was lost to millions of adults. Our Childhood. We want to provide the memories and imagination 
+        of a child for an adult. Bring back a piece of your care free life after hpurs of hardwork. Our service is essential for any and every adult.
+      </p>
+      </section>
     </div>
       <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
