--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <p>
         Here at Imaginary Friends we want to provide what was lost to millions of adults. Our Childhood. We want to provide the memories and imagination 
-        of a child for an adult. Bring back a piece of your care free life after hpurs of hardwork. Our service is essential for any and every adult.
+        of a child for an adult. Bringing back a piece of your childhood after hours of hardwork in this harsh world. Our service is essential for any and every adult.
       </p>
       </section>
     </div>
