--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <div class="background">
+    <div class="photo">
     <div class="nav-border">
       <div class="left-side">
         <span class="nav-link-border ">
@@ -84,7 +84,7 @@
     
     <div class = "pimg10">
       <p class = "p10">Jerry the Mouse</p>
-      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fjerrythemouse.png?v=1596138203474" style = "position:relative;top:-1160;left:1275;width:">
+      <img src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fjerrythemouse.png?v=1596138203474" style = "position:relative;top:-1160;left:1265;">
     </div>
     
     <p>
