--- a/popular.html
+++ b/popular.html
@@ -103,7 +103,7 @@
         style="position:relative;top:-990px;;left:66%;"
       />
         </div>
-     <div class="pimg10">
+     <div id = "newFriend" class="pimg10">
       <p class="p10">Courage</p>
       <img
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fkisspng-t-shirt-dog-iron-on-cartoon-network-cartoon-hand-painted-vector-purple-cute-puppy-5aa1b903288201.6746865215205480991659.png?v=1596137164526"
