🍿🚡 Checkpoint ./script.js:18049447/410 ./popular.html:18049447/86

--- a/popular.html
+++ b/popular.html
@@ -99,12 +99,12 @@
      <div class="pimg9">
       <p class="p9">Sonic</p>
       <img
-           onclick = "newHtml();"
+<
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2F580b57fcd9996e24bc43c336.png?v=1596136572740"
         style="position:relative;top:-990px;;left:66%;"
       />
         </div>
-     <div id = "newFriend"  class="pimg10">
+     <div id = "yes"  class="pimg10">
       <p class="p10">Courage</p>
       <img
             
