🛥🌊 Checkpoint ./script.js:18049447/161 ./popular.html:18049447/68

--- a/popular.html
+++ b/popular.html
@@ -104,10 +104,10 @@
         style="position:relative;top:-990px;;left:66%;"
       />
         </div>
-     <div id = "yes"  class="pimg10">
+     <div id = "coolHtml" ; class="pimg10">
       <p class="p10">Courage</p>
       <img
-            
+           onclick="newHtml();" 
         src="https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Fkisspng-t-shirt-dog-iron-on-cartoon-network-cartoon-hand-painted-vector-purple-cute-puppy-5aa1b903288201.6746865215205480991659.png?v=1596137164526"
         
            style="position:relative;top:-1170px;;left:81%;"
