🚆🚡 Checkpoint ./aboutUs.html:18049447/3 ./index.html:18049447/658 ./cart.html:18049447/17

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -39,7 +39,7 @@
     
         <p>
             We created Imaginary Friends as a high quality business site for
-            people that has no friends and want to purse love and company with
+            people that have no friends and want to purse love and company with
             their money.
         
         </p>
