--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       </section>
       <section class = "sectionBorder2">
       <div class = "headText2">
-      <h> Why we do it</h>
+      <h> Our Goal</h>
       </div>
       <p>
-        Here at Imaginary Friends we want to provide what was lost to millions of adults. Our Childhood. We want to provide the memories and imagination 
-        of a child for an adult. Bringing back a piece of your childhood after hours of hardwork in this harsh world. Our service is essential for any and every adult.
+        Our goal is to help every exhasted adult remember and interact with some of their favorite cartoons when they need it the most.
+        Everybody deserve the ability to interact and meet their childhood friends that were once impossible to meet.
       </p>
       </section>
     </div>
