--- a/cart.html
+++ b/cart.html
@@ -36,8 +36,9 @@
     <p id="cartDiv">
       Shopping Cart
     </p>
-    <p id = "moveFriend">
+    <hr
+<!--     <p id = "moveFriend">
       <img id = "moveFriend" src = "https://cdn.glitch.com/bc2b3edf-253e-43f1-aeee-ad47b1a45520%2Ftimmy.png?v=1595965980993" style = "position:relative;top:20%;left:58px;">
-    </p>
+    </p> -->
   </body>
 </html>
