🌝⛪️ Checkpoint ./Cart.css:18049447/56 ./cart.html:18049447/20 ./script.js:18049447/28 ./index.html:18049447/2 ./aboutUs.html:18049447/16 ./popular.css:18049447/112

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <p>
         Here at Imaginary Friends we want to provide what was lost to millions of adults. Our Childhood. We want to provide the memories and imagination 
-        of a child for an adult. Bring back a piece of your care free life after hpurs of hardwork. Our service is essential for any and every adult.
+        of a child for an adult. Bring back a piece of your care free life after hours of hardwork. Our service is essential for any and every adult.
       </p>
       </section>
       <section class = "sectionBorder2">
